syntax = "proto3";
option go_package = "github.com/klauskie/saga-dt/payments/proto";

message PaymentRequest {
  int64 userId = 1;
  string orderId = 2;
  float amount = 3;
  string currency = 4;
}

message PaymentResponse {
  int64 userId = 1;
  string orderId = 2;
  float amount = 3;
  PaymentStatus status = 4;
}

enum PaymentStatus {
  Approved = 0;
  Rejected = 1;
}

service Payments {
  rpc Debit(PaymentRequest) returns (PaymentResponse);
  rpc Credit(PaymentRequest) returns (PaymentResponse);
}